--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -141,7 +141,7 @@ app:
         empty_summary: Vous n'avez pas renseigné de résumé
         label: Informations générales
         languages: Langue(s)
-        level: Niveau du cours
+        level: Année(s)
         period: Période
       teachers:
         add_teacher: Ajouter un enseignant
@@ -192,7 +192,7 @@ app:
         standard: Types d'enseignements standards
         td: Travaux dirigés
         tp: Travaux pratiques
-        volumes: Volumes horaires "Présentiel" importés
+        volumes: Volumes horaires "Présentiel" importés des maquettes
         placeholder:
           teaching:
             hours: Heures
