--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -227,6 +227,7 @@ app:
         search_user: Rechercher un individu
         source_data: Source de données
       teaching_mode:
+        add_other: Add teaching
         additionnal: Type d'enseignement supplémentaire (facultatif)
         class: Présentiel
         cm: Cours magistraux
