--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -249,6 +249,34 @@ app:
       cancel: Cancel
       example: "Example: informations about exams, plagiarism, forbidden materials, late penalty, non-attendance, spelling, …"
       specifications: Specifications (optionnal)
+  equipment:
+    view:
+      equipment: Equipment
+      resources: Resources
+      edit: Edit
+      mandatory_equipments: Mandatory equipments
+      description: Description
+      delete: Delete
+      add: Add
+      add_description: Add a description
+      chosen_equipments: Chosen equipments
+      empty_data: Empty
+      update_delete: Update / Delete
+      update_equipment_description: Update an equipment's description
+      delete_equipment: Delete an equipment
+      educational_resources: Educational resources
+      bibliographic_resources: Bibliographic resources
+    form:
+      add: Add
+      delete: Delete
+      delete_equipment: Are you sure you want to delete the equipment %label%?
+      description_equipment: Description (optional)
+      bibliographic_resources: Bibliographic resources
+      bibliographic_resources_small: Which languages is used for this course (optional)
+      educational_resources: Educational resources
+      educational_resources_small: Period (optional)
+      save: Save
+      cancel: Cancel
   presentation:
     view:
       general:
