--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -573,3 +573,16 @@ app:
       delete: Delete
       duplicate: Duplicate
       save: Save
+
+admin:
+  dashboard:
+    published_syllabus: Published Syllabus
+    syllabus_being_filled: Syllabus being filled
+    years_overall: All years overall
+    advice_request: Advice request(s)
+    prime_request: Prime request(s)
+    form:
+      years: Choose the year
+  button:
+    display: Display
+    more_info: More info
